<resources>
    <string name="app_name">AquaFit</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Leggo</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="App_Title">AQUAFIT APP</string>
    <string name="Intro_1">To get started</string>
    <string name="Intro_2">Please enter your details below</string>
</resources>
